# big_data

./: pyproject.toml  ruff.toml
notebooks/01-intro_dask/: create_bigfile.ipynb  main.ipynb
notebooks/02-movies/: movies.ipynb
