[project]
name = "big-data"
version = "0.1.0"
description = "Projeto de estudo ca disciplina de "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask[dataframe,distributed]>=2025.2.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
